Bug 333903 - Changing the current item is very slow if many files are in the clipboard
Summary: Changing the current item is very slow if many files are in the clipboard
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: general (other bugs)
Version First Reported In: 4.13.0
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Dolphin Bug Assignee
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-04-26 11:05 UTC by Frank Reininghaus
Modified: 2014-04-30 07:38 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.13.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Frank Reininghaus 2014-04-26 11:05:36 UTC
The problem is that the clipboard data is being re-parsed not only if the clipboard contents change, but also if the selection in the current view changes. I'll post a possible fix soon.

Reproducible: Always

Steps to Reproduce:
1. Open a Dolphin window, press "Down" and "Up" a few times to change the current item.
2. Open a second Dolphin window, go to a folder with many files, press Ctrl+A and Ctrl+C to copy them.
3. Switch to the first Dolphin window, press "Down" and "Up", and note that it works much slower than in step 1.
Comment 1 Frank Reininghaus 2014-04-30 07:38:26 UTC
Git commit 25e646e9b638f381f1de6c766c0bf38854df8f5d by Frank Reininghaus.
Committed on 30/04/2014 at 07:34.
Pushed by freininghaus into branch 'KDE/4.13'.

Update the "Paste" action only if it is necessary

Updating this action is only required if the clipboard contents change,
or if the "is writable" state of the current location changes. In all
other cases, an update of this action should be prevented because it
can be very expensive if many files are in the clipboard.

In particular, the update when the selection changes could make
changing the current item in the view very slow.
REVIEW: 117782
FIXED-IN: 4.13.1

M  +3    -1    dolphin/src/dolphinmainwindow.cpp

http://commits.kde.org/kde-baseapps/25e646e9b638f381f1de6c766c0bf38854df8f5d